Rename project to Clarity Care

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact | Health Literacy Studio</title>
-  <meta name="description" content="Contact Health Literacy Studio for pilots, partnerships, or program support." />
+  <title>Contact | Clarity Care</title>
+  <meta name="description" content="Contact Clarity Care for pilots, partnerships, or program support." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="logo-badge">HL</div>
         <div>
           <div class="kicker">Accessibility + Equity</div>
-          <div>Health Literacy Studio</div>
+          <div>Clarity Care</div>
         </div>
       </div>
       <nav class="nav-links">
