--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Resources | Health Literacy Studio</title>
+  <title>Resources | Clarity Care</title>
   <meta name="description" content="Guides, templates, and playbooks to support health literacy programs." />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -14,7 +14,7 @@
         <div class="logo-badge">HL</div>
         <div>
           <div class="kicker">Accessibility + Equity</div>
-          <div>Health Literacy Studio</div>
+          <div>Clarity Care</div>
         </div>
       </div>
       <nav class="nav-links">
