--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About | Health Literacy Studio</title>
-  <meta name="description" content="Learn about the mission, team, and governance behind Health Literacy Studio." />
+  <title>About | Clarity Care</title>
+  <meta name="description" content="Learn about the mission, team, and governance behind Clarity Care." />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="logo-badge">HL</div>
         <div>
           <div class="kicker">Accessibility + Equity</div>
-          <div>Health Literacy Studio</div>
+          <div>Clarity Care</div>
         </div>
       </div>
       <nav class="nav-links">
