--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Health Literacy Translator | Clarity Studio</title>
+  <title>Clarity Care | Plain-Language Translator</title>
   <meta name="description" content="Translate clinical notes into clear, respectful language with an interactive, patient-first tool." />
   <link rel="stylesheet" href="styles.css" />
 </head>
@@ -14,7 +14,7 @@
         <div class="logo-badge">HL</div>
         <div>
           <div class="kicker">Accessibility + Equity</div>
-          <div>Health Literacy Studio</div>
+          <div>Clarity Care</div>
         </div>
       </div>
       <nav class="nav-links">
@@ -121,7 +121,7 @@
         <div class="hero-card reveal" style="--delay:120ms">
           <div class="kicker">Clinical to clear in minutes</div>
           <h1>Translate complex care notes into confident, human language.</h1>
-          <p>Health Literacy Studio turns dense medical language into clear, patient-first guidance. It highlights actions, suggests questions, and keeps the tone respectful and calm.</p>
+          <p>Clarity Care turns dense medical language into clear, patient-first guidance. It highlights actions, suggests questions, and keeps the tone respectful and calm.</p>
           <div class="row" style="margin-top:16px">
             <a class="btn primary" href="#studio">Try the translator</a>
             <a class="btn secondary" href="#features">See features</a>
