Update footer copyright

--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
   </main>
 
   <footer class="footer">
-    Questions about governance? Email governance@healthliteracystudio.org
+    Copyright Akash Arun Kumar Soumya
   </footer>
 </body>
 </html>
