--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
   </main>
 
   <footer class="footer">
-    We respond to all partnership inquiries within two business days.
+    Copyright Akash Arun Kumar Soumya
   </footer>
 </body>
 </html>
