--- a/file.html
+++ b/file.html
@@ -258,7 +258,7 @@
   </main>
 
   <footer class="footer">
-    This demo does not provide medical advice. It is a readability aid only.
+    Copyright Akash Arun Kumar Soumya
   </footer>
 
   <script src="translator.js" defer></script>
