--- a/programs.html
+++ b/programs.html
@@ -144,7 +144,7 @@
   </main>
 
   <footer class="footer">
-    Programs are tailored to each organization and community partner.
+    Copyright Akash Arun Kumar Soumya
   </footer>
 </body>
 </html>
