--- a/resources.html
+++ b/resources.html
@@ -111,7 +111,7 @@
   </main>
 
   <footer class="footer">
-    Resources are available for partner organizations and public health teams.
+    Copyright Akash Arun Kumar Soumya
   </footer>
 </body>
 </html>
