--- a/programs.html
+++ b/programs.html
@@ -144,7 +144,7 @@
   </main>
 
   <footer class="footer">
-    Copyright Akash Arun Kumar Soumya
+    © 2026 Akash Arun Kumar Soumya
   </footer>
 </body>
 </html>
