--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </main>
 
   <footer class="footer">
-    Copyright Akash Arun Kumar Soumya
+    © 2026 Akash Arun Kumar Soumya
   </footer>
 
   <script src="translator.js" defer></script>
